<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/login_bg"
    tools:context="com.sy.appletree.login_register.LoginAvtivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <EditText
                    android:text="15979445548"
                    android:id="@+id/login_phone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="您的手机号码"
                    android:phoneNumber="true"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textColor="@android:color/white"
                    android:background="@null"
                    android:textColorHint="@android:color/white"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="4dp"
                    android:background="@android:color/white"/>
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="4dp"
                    android:background="@android:color/white"/>

                <EditText
                    android:text="123456"
                    android:id="@+id/login_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="您的登录密码"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:background="@null"
                    android:textColorHint="@android:color/white"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"/>
            </RelativeLayout>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:text="@string/login_btn"
                android:textColor="@color/textColor"
                android:textSize="20sp"
                android:background="@drawable/select_login_btn"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:id="@+id/login_forget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="30dp"
                android:textColor="@android:color/white"
                android:text="@string/login_forget"/>
            <TextView
                android:id="@+id/login_to_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="30dp"
                android:textColor="@android:color/white"
                android:text="@string/login_register"/>
            <View
                android:layout_width="1dp"
                android:layout_height="20dp"
                android:layout_centerInParent="true"
                android:background="@android:color/white"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
