<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sy.appletree.preparelessons.AddLessonsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/navibar_bg_big">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/base_left"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@mipmap/btn_back_white"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:text="@string/addLesson"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/base_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:minWidth="40dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@mipmap/btn_icon_scan_white_n"
                    android:visibility="gone"/>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        android:background="@android:color/white"
        android:orientation="vertical">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/lesson_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/chooseCityTextColor"
                    android:background="@null"
                    android:textSize="16sp"
                    android:hint="请输入课程名称"/>
                <View
                    android:id="@+id/empty"
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/line"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:textSize="16sp"
                    android:text="选择教材版本"/>
                <com.sy.appletree.views.MyGridView
                    android:id="@+id/lesson_textbook"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:numColumns="4"
                    android:columnWidth="80dp"
                    android:stretchMode="columnWidth"
                    android:verticalSpacing="10dp"
                    android:horizontalSpacing="10dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:text="选择科目"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/holo_red_light"
                        android:textSize="13sp"
                        android:text="@string/subTiShi"/>
                </LinearLayout>

                <com.sy.appletree.views.MyGridView
                    android:id="@+id/lesson_subject"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:columnWidth="80dp"
                    android:numColumns="4"
                    android:stretchMode="columnWidth"
                    android:verticalSpacing="10dp"
                    android:horizontalSpacing="10dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:text="选择适用年级"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:ellipsize="end"
                        android:textSize="13sp"
                        android:textColor="@android:color/holo_red_light"
                        android:text="@string/subTiShi"/>
                </LinearLayout>

                <com.sy.appletree.views.MyGridView
                    android:id="@+id/lesson_grade"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:columnWidth="80dp"
                    android:numColumns="4"
                    android:stretchMode="columnWidth"
                    android:verticalSpacing="10dp"
                    android:horizontalSpacing="10dp"/>
            </LinearLayout>
        </ScrollView>
        <RelativeLayout
            android:id="@+id/lesson_save"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:clickable="true"
            android:background="@drawable/select_allbg_press">
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/line"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textSize="18sp"
                android:textColor="@color/chooseCityTextColor"
                android:text="@string/save"/>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
